# demography-predictor

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  base_lstm_evaluation.json  base_lstm_evaluation_pop_total.json  comparision_experiments.md  config.py  features_only.json  features_targets_included.json  global_model_eval.json  input_seq_test.csv  lakmoos_integration_tool.md  loggers_config.yaml  model_test.py  output_seq_test.csv  per_state_metrics.json  progress.report.md  pyproject.toml  test_pred_eval_all_states.json  test_pred_eval_all_states_20.json  try_global_model_pipeline.py  try_local_model_pipeline.py  try_predictor_pipeline.py  validation_experiments.md
client/: client.py  client_requests.py
data_science/: README.md
data_science/feature_engineering/: correlation_matrix_features.py
data_science/preprocessors/: base.py  config.py  dataset_preprocessor.py  find_year_matches.py  interpolator.py
data_science/visualizations/: correlation_matrix.py  visualize.py  visualize_workgoal.py
explanations/age-predictor/: state_performance_sorted.json
explanations/arima-age-predictor/: state_performance_sorted.json
explanations/arima-gender-dist-predictor/: state_performance_sorted.json
explanations/lstm-age-predictor/: state_performance_sorted.json
explanations/lstm-gender-dist-predictor/: state_performance_sorted.json
explanations/test-target-model-tree/: state_performance_sorted.json
local_model_benchmark/: README.md  benchmark.py  config.py  data_experiments.py  model_experiments.py  utils.py
local_model_benchmark/experiments/: base_experiment.py  data_experiments.py  model_experiments.py  new_data_experiemnts.py  new_data_experiments.py  new_model_experiments.py  old_model_experiments.py
model_experiments/: README.md  base_experiment.py  benchmark.py  config.py  main.py  utils.py
model_experiments/experiments/: data_experiments.py  model_experiments.py  predictor_experiments.py
model_experiments/model_selection/: feature_model_selection.py  second_model_selection.py  target_model_selection.py
model_selection/: README.md  feature_model_selection.py  second_model_selection.py  selection.ipynb  selection.py
src/: .gitattributes  README.md  base.py  evaluation.py  main.py  pipeline.py  predictors.py  state_groups.py
src/api/: distribution_curve.py  main.py  models.py
src/cli/: cli.py
src/compare_models/: compare.py
src/feature_explainer/: explain.ipynb  explain.py  explainers.py  print_predictions.py
src/feature_model/: README.md  bp_nn.py  ensemble_model.py  (+3 more)
(+1121 files in other folders)
