[tool.poetry]
name = "demography-predictor"
version = "0.1.0"
description = ""
authors = ["Andrew <ado.ponechal@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }, { include = "model_selection" }]
package-mode = false

[tool.poetry.scripts]
dataset-create = "data_science.preprocessors.dataset_preprocessor:main"
cli = "src.cli.cli:cli"
api = "src.api.main:main"
client = "client.client:client"

[tool.poetry.dependencies]
python = "~3.11"
torch = "^2.6.0"
scikit-learn = "<1.5.0"
pandas = "<2.2.0"
pydantic-settings = "^2.7.1"
pydantic = "^2.10.6"
optree = ">=0.13.0"
matplotlib = "<3.8.0"
colorama = "^0.4.6"
kaleido = "0.2.1"
pycaret = "^3.3.2"
pyyaml = "^6.0.2"
lightgbm = "^4.6.0"
xgboost = "^2.1.4"
optuna = "^4.2.1"
click = "^8.1.8"
seaborn = "^0.13.2"
shap = "^0.47.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
